# cowrie-deploy-toolkit

./: .dockerignore  .gitignore  .osv-scanner.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COWRIE_VERSION_LOG_PARSING.md  DOWNLOADS_PERFORMANCE_FIX.md  IMPROVEMENTS.md  Justfile  README.md  ROADMAP.md  SECURITY_AUDIT_2026-01-03.md  VIRUSTOTAL_FIX.md  deploy-updates.sh  deploy_cowrie_honeypot.sh  docker-compose.api.yml  example-config.toml  fix-permissions.sh  generate_cowrie_fs_from_hetzner.sh  nginx-sse-config.md  pyproject.toml  test_ttp_system.py  update-honeypots.sh
.github/: dependabot.yml
.github/workflows/: build-images.yml  linter.yml  osv-scanner-scheduled.yml  update-honeypots.yml
api/: Dockerfile  README.md  app.py  config.py  requirements.txt
api/routes/: canary.py  clusters.py  downloads.py  health.py  sessions.py  stats.py  system.py  threat.py
api/services/: cache.py  clustering.py  log_parser.py  mitre_attack.py  opencti_client.py  sqlite_parser.py  stix_export.py  threat_intel.py  ttp_extraction.py
api/sql/: events_schema.sql
cowrie/: .dockerignore  Dockerfile  userdb.txt.default
cowrie-core/: README_cut.md  README_dynamic.md  __init__.py  auth.py  fs_dynamic.py
cowrie-core/commands/: cut.py  uptime.py
cowrie-plugins/: iplock.py  sqlite.py
docs/: CLAUDE_enhancements.md  ChatGPT_enhancements.md  GROK_CODE_FAST_enhancements.md  IMPROVEMENTS.md  MISTRAL_enhancements.md  ROADMAP.md  VIRUSTOTAL_FIX.md  combined_enhancements.md
fake-data/: wordpress-db.sql
scripts/: README.md  __init__.py  auto-update-docker.sh  common.sh  cowrie-cron  cowrie-event-indexer.service  daily-report.py  debug-api-env.sh  diagnose-vt-data.py  download-maxmind-local.sh  event-indexer.py  fix-multisource-api-url.sh  get-honeypot-config.py  health-check.sh  process-config.py  ps-to-cmdoutput.py  read-toml.py  report-config.example.json  report.env.example  requirements.txt  setup-reporting.sh  test-api-vt-data.py  troubleshoot-web.sh  ttp-analyzer.py  update-agent.sh  yara-scanner-daemon.py
systemd/: cowrie-update.service  cowrie-update.timer  ttp-analyzer.service  ttp-analyzer.timer
web/: Dockerfile  README.md  __init__.py  app.py  cache.py  datasource.py  docker-compose.web.yml  multisource.py  requirements.txt  tailscale-serve.json
web/static/css/: style.css
web/templates/: 404.html  asns.html  attack_map.html  base.html  canary_alerts.html  clients.html  cluster_detail.html  clusters.html  commands.html  countries.html  credentials.html  downloads.html  index.html  ips.html  mitre_matrix.html  playback.html  preview.html  session_detail.html  sessions.html  system_info.html
